@@ -5,7 +5,6 @@ import com.coursework.backend.exception.exceptions.AccessDeniedException;
 import com.coursework.backend.exception.exceptions.FolderNotFoundException;
 import com.coursework.backend.exception.exceptions.GroupNotFoundException;
 import com.coursework.backend.exception.exceptions.TestNotFoundException;
-import com.coursework.backend.folder.dto.FolderDto;
 import com.coursework.backend.folder.model.Folder;
 import com.coursework.backend.folder.repository.FolderRepository;
 import com.coursework.backend.group.model.Group;
@@ -13,7 +12,9 @@ import com.coursework.backend.group.repository.GroupRepository;
 import com.coursework.backend.test.dto.AssignTestToGroupDto;
 import com.coursework.backend.test.dto.CreateTestDto;
 import com.coursework.backend.test.dto.TestDto;
+import com.coursework.backend.test.model.AccessToTests;
 import com.coursework.backend.test.model.Test;
+import com.coursework.backend.test.repository.AccessToTestsRepository;
 import com.coursework.backend.test.repository.TestRepository;
 import com.coursework.backend.user.model.User;
 import com.coursework.backend.user.service.UserService;
@@ -34,31 +35,27 @@ public class TestService {
     private final UserService userService;
     private final FolderRepository folderRepository;
     private final GroupRepository groupRepository;
+    private final AccessToTestsRepository accessToTestsRepository;
 
-
-    public List<TestDto> getTestsByUser() {
+    public List<TestDto> getRootTestsByUser() {
         final User user = userService.getCurrentUser();
-        List<Test> tests = testRepository.findAllByCreatorAndFolder(user, null);
-        return tests.stream().map(Test::toDto).collect(Collectors.toList());
+        List<AccessToTests> accessToTests = accessToTestsRepository.findAllByUserAndFolder(user, null);
+
+        return accessToTests.stream()
+                .map((access) -> access.getTest().toDto())
+                .collect(Collectors.toList());
     }
 
     public List<TestDto> getTestsByUserAndFolder(Long folderId) {
         final User user = userService.getCurrentUser();
         final var folder = folderRepository.findByIdAndUser(folderId, user)
                 .orElseThrow(() -> new RuntimeException("Папка не найдена"));
-        final var tests = testRepository.findAllByCreatorAndFolder(user, folder);
+        final var tests = accessToTestsRepository.findAllByUserAndFolder(user, folder);
         return tests.stream()
-                .map(Test::toDto)
-                .toList();
+                .map((access) -> access.getTest().toDto())
+                .collect(Collectors.toList());
     }
 
-//    public Test createTest(String name, User creator, Group group, Folder folder) {
-//        Test test = new Test(name, creator, group, folder);
-//
-//        String uniqueId = generateUniqueIdForField("uuid_training");
-//        test.setId(uniqueId);
-//        return testRepository.save(test);
-//    }
 
     public TestDto createTest(CreateTestDto createTestDto) {
         final User currentUser = userService.getCurrentUser();
@@ -82,9 +79,17 @@ public class TestService {
         test.setId(uniqueId);
 
         Test savedTest = testRepository.save(test);
+        //не проверено
+        AccessToTests accessToTest = new AccessToTests();
+        accessToTest.setFolder(folder);
+        accessToTest.setUser(currentUser);
+        accessToTest.setTest(test);
+        accessToTestsRepository.save(accessToTest);
+
         return savedTest.toDto();
     }
 
+    // тут тоже надо дописать, что тест появляется у пользователей в какой-то папке в таблице access_to_tests
     public TestDto assignTestToGroup(AssignTestToGroupDto assignTestToGroupDto) {
         final User currentUser = userService.getCurrentUser();
 
